--- a/public/styles.css
+++ b/public/styles.css
@@ -20,6 +20,13 @@ body {
   justify-self: end;
 }
 
+.trans{
+  /* -webkit-text-fill-color: red; */
+  -webkit-text-stroke: 4px #83b4ff;
+  -webkit-text-fill-color: transparent;
+  letter-spacing: 5px;
+}
+
 h3{
   font-size: inherit;
 }
@@ -226,9 +233,9 @@ width: 100%
   list-style: none;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
   gap: 20px;
-  height: 400px;
+  height: 330px;
   overflow-y: scroll;
 }
 
@@ -251,6 +258,8 @@ width: 100%
   border: 2px solid #83b4ff;
   border-radius: 8px;
   padding: 20px;
+  padding-bottom: 0;
+  min-height: 150px;
   overflow: hidden;
 }
 
@@ -267,7 +276,6 @@ width: 100%
 .card-item > ul {
   color: grey;
   padding: 0;
-  padding-bottom: 10px;
   padding-left: 20px;
   margin-top: 40px;
 }
@@ -278,10 +286,11 @@ width: 100%
 
 .card {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
   gap: 20px;
-  max-height: 500px;
-  overflow: scroll
+  max-height: 380px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 header {
@@ -907,8 +916,14 @@ header {
 
   .resume-container{
     margin-top: 75px;
-  
   }
+  .card {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+  .icon-list {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  }
+  
 }
 
 @media screen and (min-width: 768px) {
